--- a/patitasbog-frontend/package.json
+++ b/patitasbog-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.3",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^19.1.0",
