--- a/patitasbog-frontend/package.json
+++ b/patitasbog-frontend/package.json
@@ -13,8 +13,10 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
